--- a/css/site.css
+++ b/css/site.css
@@ -3,12 +3,12 @@
    margin-bottom: 5rem;
  }
 
- .sticky-nav {
+ /* .sticky-nav {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
- }
+ } */
 
  .homeBG {
     width: 100%;
@@ -17,6 +17,10 @@
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+ }
+
+ .minHeight {
+     min-height: 80vh;
  }
 
  .homeText {
