--- a/css/site.css
+++ b/css/site.css
@@ -3,6 +3,11 @@
    margin-bottom: 5rem;
  }
 
+ body>main {
+     margin-top: 20px;
+     margin-bottom: 60px;    
+ }
+
  /* .sticky-nav {
    position: fixed;
    left: 0;
