--- a/css/site.css
+++ b/css/site.css
@@ -3,6 +3,10 @@
    margin-bottom: 5rem;
  }
 
+main>.container-fluid {
+    padding-top: 60px;
+}
+
  body>main {
      margin-top: 20px;
      margin-bottom: 60px;    
